# ta-backend-fastapi

./: .dockerignore  .gitignore  alembic.ini  docker-compose.yml  dockerfile  prestart.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1ad262b9d243_create_kecamatan_kelurahan_patients_and_.py  5e345f41500a_create_user_and_puskesmas_models.py  c814277ae3e5_create_user_and_puskesmas_models.py  e46a0dac7f60_create_kecamatan_kelurahan_patients_and_.py
app/: main.py  pre_start.py
app/api/: dependencies.py  endpoints.py
app/api/routers/: kecamatan.py  login.py  puskesmas.py  users.py
app/controllers/: __init__.py  base.py  kecamatan.py  puskesmas.py  user.py
app/core/: config.py
app/db/: base.py  base_class.py  init_db.py
app/models/: __init__.py  kecamatan.py  kelurahan.py  patients.py  puskesmas.py  tb_cases.py  user.py
app/schemas/: __init__.py  kecamatan.py  kelurahan.py  patients.py  puskesmas.py  tb_cases.py  user.py
